--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "webdriverio": "^5.22.4"
   },
   "devDependencies": {
+    "@wdio/junit-reporter": "^5.18.6",
     "@wdio/local-runner": "^5.22.4",
     "@wdio/mocha-framework": "^5.18.7",
-    "@wdio/sync": "^5.20.1"
+    "@wdio/sync": "^5.20.1",
+    "wdio-browserstack-reporter": "git+https://github.com/browserstack/wdio-browserstack-reporter.git#wdio5"
   }
 }
