--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "webdriverio": "^5.22.4"
   },
   "devDependencies": {
+    "@wdio/dot-reporter": "^5.18.6",
     "@wdio/junit-reporter": "^5.18.6",
     "@wdio/local-runner": "^5.22.4",
     "@wdio/mocha-framework": "^5.18.7",
